--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -52,7 +52,7 @@ The Asian Development Bank, a multinational development lender, has been a key f
 “Given the economic sense that this E.V. conversion represents for Nepal, I think I would see it as unlikely that we would have major policy change,” Mr. Cauchois said. “But that’s basically a wish more than a conviction.” 
 <br><br>
 
-From Indian Gasoline to Chinese Cars 
+<strong>From Indian Gasoline to Chinese Cars</strong>
 <br><br>
 
 Many countries are trying to electrify their vehicle fleets, but the case for doing so is even more obvious in Nepal, with its clean energy embodied in the rivers that run down from the Himalayas. 
@@ -76,7 +76,7 @@ Finally, the government set electricity costs for chargers at less than market r
 “At first, everybody was scared — how to establish and whether it would run or not,” said Kul Man Ghising, who managed the electricity authority until March. “But we tried and tried and tried.” Businesses have now installed about 1,200 chargers, according to the agency, and private residences are likely to have thousands more. 
 <br><br>
 
-‘A Win-Win Situation’ 
+<strong>‘A Win-Win Situation’</strong> 
 <br><br>
 
 At first, automotive dealers were skeptical. But Yamuna Shrestha saw the potential. 
@@ -117,7 +117,7 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
 “It’s a very positive direction they are going in, but it really comes down to the long-term policy,” Mr. Shrestha said. “Stability is always a question mark.” 
 <br><br>
 
-E.V.s for Everybody 
+<strong>E.V.s for Everybody</strong>
 <br><br>
 
 For now, the electric shift in passenger vehicles is moving swiftly. But a vast majority of Nepal’s residents don’t have cars. Instead, they use cheaper motorbikes or mostly gasoline- and diesel-powered buses. 
