--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -125,7 +125,7 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
  <img src="image4.jpeg" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
 
-<h3>E.V.s for Everybody</h3>
+E.V.s for Everybody
 <br><br>
 
 For now, the electric shift in passenger vehicles is moving swiftly. But a vast majority of Nepal’s residents don’t have cars. Instead, they use cheaper motorbikes or mostly gasoline- and diesel-powered buses. 
