--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -57,7 +57,7 @@ The Asian Development Bank, a multinational development lender, has been a key f
 “Given the economic sense that this E.V. conversion represents for Nepal, I think I would see it as unlikely that we would have major policy change,” Mr. Cauchois said. “But that’s basically a wish more than a conviction.” 
 <br><br>
 
-<h3>From Indian Gasoline to Chinese Cars</h3>
+From Indian Gasoline to Chinese Cars
 <br><br>
 
 Many countries are trying to electrify their vehicle fleets, but the case for doing so is even more obvious in Nepal, with its clean energy embodied in the rivers that run down from the Himalayas. 
@@ -81,7 +81,7 @@ Finally, the government set electricity costs for chargers at less than market r
 “At first, everybody was scared — how to establish and whether it would run or not,” said Kul Man Ghising, who managed the electricity authority until March. “But we tried and tried and tried.” Businesses have now installed about 1,200 chargers, according to the agency, and private residences are likely to have thousands more. 
 <br><br>
 
-<h3>‘A Win-Win Situation’</h3>
+‘A Win-Win Situation’
 <br><br>
 
 At first, automotive dealers were skeptical. But Yamuna Shrestha saw the potential. 
