--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -57,7 +57,7 @@ The Asian Development Bank, a multinational development lender, has been a key f
 “Given the economic sense that this E.V. conversion represents for Nepal, I think I would see it as unlikely that we would have major policy change,” Mr. Cauchois said. “But that’s basically a wish more than a conviction.” 
 <br><br>
 
-From Indian Gasoline to Chinese Cars
+<div> <p class="section"></p> From Indian Gasoline to Chinese Cars </p> </div>
 <br><br>
 
 Many countries are trying to electrify their vehicle fleets, but the case for doing so is even more obvious in Nepal, with its clean energy embodied in the rivers that run down from the Himalayas. 
@@ -81,7 +81,7 @@ Finally, the government set electricity costs for chargers at less than market r
 “At first, everybody was scared — how to establish and whether it would run or not,” said Kul Man Ghising, who managed the electricity authority until March. “But we tried and tried and tried.” Businesses have now installed about 1,200 chargers, according to the agency, and private residences are likely to have thousands more. 
 <br><br>
 
-‘A Win-Win Situation’
+<div> <p class="section"></p> ‘A Win-Win Situation’</p> </div>
 <br><br>
 
 At first, automotive dealers were skeptical. But Yamuna Shrestha saw the potential. 
@@ -125,7 +125,7 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
  <img src="image4.jpeg" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
 
-E.V.s for Everybody
+<div> <p class="section"></p> E.V.s for Everybody</p> </div>
 <br><br>
 
 For now, the electric shift in passenger vehicles is moving swiftly. But a vast majority of Nepal’s residents don’t have cars. Instead, they use cheaper motorbikes or mostly gasoline- and diesel-powered buses. 
