--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -36,7 +36,7 @@
 
 <div class="container px-4 text-start">
   <div class="row gx-5">
-    <div class="col bg-black text-white">
+    <div class="col text-white back">
       <div class="p-3">
 
 <div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
