--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -22,6 +22,35 @@
 </head>
 <body>
 
+     <!-- Navbar start-->
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <div class="container-fluid">
+     <a class="navbar-brand" href="#">Cait Heiderman</a>
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+         <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">EXPERIENCE</a>
+         </li>
+
+          <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">SKILLS</a>
+         </li>
+
+          <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
+          </li>
+       </ul>
+       
+     </div>
+   </div>
+ </nav>
+ <!-- Navbar end-->
+
 
 <div class="px-4 py-5 my-5 text-center topper"> 
   <h1 class="display-5 fw-bold text-white">CAIT HEIDERMAN</h1>
