--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -38,7 +38,7 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-           <a class="nav-link active" aria-current="page" <a href="#div_ABOUT ME"> ABOUT ME <i class="bi bi-person"> </i></a>  </a>
+           <a class="nav-link active" aria-current="page" href="#div_ABOUT ME"> ABOUT ME<i class="bi bi-person"> </i>  </a>
          </li>
 
          <li class="nav-item">
